added callback code for matt to play with

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/bradenericson/DatagramSender",
   "dependencies": {
+    "messenger": "0.0.9",
     "secure-random": "^1.1.1"
   }
 }
