Added more UI controls for interacting with resources

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   },
   "homepage": "https://github.com/bradenericson/DatagramSender",
   "dependencies": {
+    "cli-spinner": "^0.2.0",
     "messenger": "0.0.9",
     "mongoose": "^4.0.2",
-    "secure-random": "^1.1.1"
+    "secure-random": "^1.1.1",
+    "simple-spinner": "0.0.3"
   }
 }
