--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/bradenericson/DatagramSender",
   "dependencies": {
+    "fs": "0.0.2",
     "messenger": "0.0.9",
+    "mime": "^1.3.4",
     "mongoose": "^4.0.2",
     "secure-random": "^1.1.1"
   }
