--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "homepage": "https://github.com/bradenericson/DatagramSender",
   "dependencies": {
-    "fs": "0.0.2",
+    "buffer-reader": "^0.1.0",
     "cli-spinner": "^0.2.0",
+    "fs": "0.0.2",
     "messenger": "0.0.9",
     "mime": "^1.3.4",
     "mongoose": "^4.0.2",
