--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "messenger": "0.0.9",
     "mime": "^1.3.4",
     "mongoose": "^4.0.2",
+    "node-mime": "^1.0.0",
     "secure-random": "^1.1.1",
     "simple-spinner": "0.0.3"
   }
